--- a/frontendmentor/order-summary-component-main/style.css
+++ b/frontendmentor/order-summary-component-main/style.css
@@ -1,177 +1,418 @@
-@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;600;700;900&display=swap");
 
 :root {
-	--blue-100: hsl(225, 100%, 98%);
-	--blue-200: hsl(225, 100%, 94%);
-	--blue-300: hsl(245, 75%, 52%);
-	--blue-400: hsl(224, 23%, 55%);
-	--blue-500: hsl(223, 47%, 23%);
+  --blue-100: hsl(225, 100%, 98%);
+  --blue-200: hsl(225, 100%, 94%);
+  --blue-300: hsl(245, 75%, 52%);
+  --blue-400: hsl(224, 23%, 55%);
+  --blue-500: hsl(223, 47%, 23%);
 }
 
 *,
 *::before,
 *::after {
-	padding: 0;
-	margin: 0;
-	box-sizing: inherit;
+  padding: 0;
+  margin: 0;
+  box-sizing: inherit;
 }
 
 html,
 body {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-	min-height: 100vh;
-	background-image: url(./images/pattern-background-desktop.svg);
-	background-repeat: no-repeat;
-	background-size: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	font-family: "Kaushan Script", sans-serif;
-	font-size: 14px;
+  min-height: 100vh;
+  background-image: url(./images/pattern-background-desktop.svg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: "Red Hat Display", sans-serif;
+  font-size: 14px;
 }
 
+main {
+  max-width: 360px;
+  width: 100%;
+  overflow: hidden;
+  border-radius: 12px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+#screen {
+  display: flex;
+  transition: 200ms;
+}
+/* process section START */
+
+.process-wrapper {
+  background: #fff;
+  width: 360px;
+  height: 537px;
+}
+
+.process-header {
+  position: relative;
+  padding: 20px 0;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 900;
+}
+
+.process-header img {
+  position: absolute;
+  top: 24px;
+  left: 15px;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+
+.process-content {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.process-item {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.process-item label {
+  color: var(--blue-50);
+  font-weight: 700;
+}
+
+.process-item input {
+  width: 100%;
+  height: 35px;
+  padding: 0 10px;
+  background: var(--blue-100);
+  border-radius: 6px;
+  border: 2px solid var(--blue-400);
+  outline: none;
+}
+
+.process-item input:focus {
+  border-color: var(--blue-300);
+}
+
+.process-item input::placeholder {
+  color: #aaa;
+}
+
+.process-item select {
+  border-radius: 5px;
+  padding: 5px 10px;
+}
+
+.expiration-section h4 {
+  margin-bottom: 10px;
+}
+
+.expiration-content {
+  display: flex;
+  gap: 20px;
+}
+
+.expiration-section .process-item {
+  flex: 1;
+}
+
+.process-submit {
+  padding: 0 20px;
+}
+
+.process-submit button {
+  background: var(--blue-300);
+  color: #fff;
+  display: block;
+  height: 40px;
+  width: 100%;
+  border-radius: 8px;
+  box-shadow: 0px 10px 20px rgb(56 41 224 / 30%);
+  transition: 300ms;
+}
+
+/* process section END */
+
 .container {
-	max-width: 50vh;
-	width: 100%;
-	border-radius: 12px;
-	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-	overflow: hidden;
-	background: #fff;
-	transition: 150ms;
+  background: #fff;
+  transition: 150ms;
 }
 
 .container:hover {
-	transform: translateY(-2px);
-	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  transform: translateY(-2px);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
 }
 
 .header svg {
-	width: 100%;
+  width: 100%;
+  position: relative;
+  bottom: 7px;
 }
 
 svg:hover path.svg-circle {
-	d: path("M3,3 L8,3 L2,5 L8,5 L3,7 L7,7");
+  d: path("M3,3 L8,3 L2,5 L8,5 L3,7 L7,7");
 }
 
 .content {
-	padding: 20px 40px;
-	text-align: center;
+  padding: 10px 40px 30px;
+  text-align: center;
 }
 
 .heading {
-	color: var(--blue-500);
-	font-size: 23px;
-	font-weight: 900;
-	margin-bottom: 10px;
-	line-height: 1.6;
+  color: var(--blue-500);
+  font-size: 23px;
+  font-weight: 900;
+  margin-bottom: 10px;
+  line-height: 1.6;
 }
 
 .description {
-	color: var(--blue-400);
-	font-size: 13px;
-	padding: 0 20px;
-	font-weight: 500;
-	margin-bottom: 16px;
+  color: var(--blue-400);
+  font-size: 13px;
+  font-weight: 500;
+  margin-bottom: 16px;
 }
 
 button {
-	border: 0;
-	background: none;
-	cursor: pointer;
-	display: block;
-	font-family: inherit;
-	font-weight: 700;
+  border: 0;
+  background: none;
+  cursor: pointer;
+  display: block;
+  font-family: inherit;
+  font-weight: 700;
 }
 
 .plan {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	background: var(--blue-100);
-	border-radius: 8px;
-	padding: 16px 20px;
+  position: relative;
+}
+
+.current-plan {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: var(--blue-100);
+  border-radius: 8px;
+  padding: 16px 20px;
+  width: 280px;
 }
 
 .plan-main {
-	display: flex;
-	align-items: center;
-	gap: 16px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
 
 .plan-icon {
-	width: 36px;
+  width: 36px;
 }
 
 .plan-current {
-	padding: 5px 0;
-	text-align: left;
+  padding: 5px 0;
+  text-align: left;
 }
 
 .plan-name {
-	font-weight: 900;
-	color: var(--blue-500);
-	margin-bottom: 4px;
-	font-size: 13px;
+  font-weight: 900;
+  color: var(--blue-500);
+  margin-bottom: 4px;
+  font-size: 13px;
 }
 
 .plan-price {
-	color: var(--blue-400);
+  color: var(--blue-400);
 }
 
 .plan-button {
-	color: var(--blue-300);
-	font-size: 12px;
-	font-weight: 700;
-	position: relative;
-	text-decoration: underline;
-	transition: 100ms;
+  color: var(--blue-300);
+  font-size: 12px;
+  font-weight: 700;
+  position: relative;
+  text-decoration: underline;
+  transition: 100ms;
 }
 
 .plan-button:hover {
-	opacity: 0.6;
-	text-decoration: none;
+  opacity: 0.6;
+  text-decoration: none;
 }
 
+/* Select plan START */
+.select-plan {
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  top: -80px;
+  transition: 200ms;
+  border: 2px dashed #fd4646;
+  border-radius: 6px;
+  overflow: hidden;
+}
+
+.select-plan.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.plan-option {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #fff;
+  padding: 16px 20px;
+  width: 280px;
+  transition: 200ms;
+}
+
+.plan-option:hover {
+  background: #fff1e9;
+}
+
+.plan-option:nth-of-type(1),
+.plan-option:nth-of-type(2) {
+  border-bottom: 2px dashed #e50031;
+}
+
+.plan-option.active {
+  background: #eee;
+}
+
+.plan-option.active .plan-button,
+.plan-option.active .plan-button:hover {
+  text-decoration: none;
+  color: red;
+  opacity: 1;
+}
+
+/* Select plan END */
+
 .payment {
-	background: var(--blue-300);
-	color: #fff;
-	display: block;
-	margin: 26px auto;
-	height: 40px;
-	width: 100%;
-	border-radius: 8px;
-	box-shadow: 0px 10px 20px rgba(56, 41, 224, 0.3);
-	transition: 300ms;
+  background: var(--blue-300);
+  color: #fff;
+  display: block;
+  margin: 26px auto;
+  height: 40px;
+  width: 100%;
+  border-radius: 8px;
+  box-shadow: 0px 10px 20px rgba(56, 41, 224, 0.3);
+  transition: 300ms;
 }
 
 .payment:hover {
-	opacity: 0.6;
+  opacity: 0.6;
 }
 
 .cancel {
-	margin: auto;
-	color: var(--blue-400);
-	transition: 200ms;
-	font-weight: 900;
-	margin-bottom: 10px;
+  margin: auto;
+  color: var(--blue-400);
+  transition: 200ms;
+  font-weight: 900;
+  margin-bottom: 10px;
 }
 
 .cancel:hover {
-	color: var(--blue-500);
+  color: var(--blue-500);
 }
 
 .cool {
-	color: rgb(56, 41, 224);
+  color: rgb(56, 41, 224);
 }
 
 @media (max-width: 476px) {
-	body {
-		padding: 0 20px;
-		background-image: url("./images/pattern-background-mobile.svg");
-		background-size: 230%;
-	}
+  body {
+    padding: 0 20px;
+    background-image: url("./images/pattern-background-mobile.svg");
+    background-size: 230%;
+  }
+}
+
+.container:hover #musics {
+  animation: 2s shake ease-in-out infinite alternate;
+}
+
+.container:hover #circles {
+  animation: 1s stars ease-in-out infinite alternate;
+}
+
+@keyframes stars {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes shake {
+  0% {
+    opacity: 1;
+    transform: translate(0px, 3px);
+  }
+  20% {
+    opacity: 0.5;
+    transform: translate(0px, -3px);
+  }
+  50% {
+    opacity: 0.7;
+    transform: translate(0px, 0px);
+  }
+  70% {
+    opacity: 0.5;
+    transform: translate(0px, -5px);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0px, 3px);
+  }
+}
+
+/* spinner */
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 30px;
+  height: 30px;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  margin: 3px;
+  border: 4px solid #fff;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #fff transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@media (max-width: 676px) {
+  body {
+    background-image: url(./images/pattern-background-mobile.svg);
+  }
 }
